Unreleased
    - Prevent filters from crashing if the input file is empty (empty string
      passed)

0.10.1 (2014-07-03)
    - Python 3 fixes.
    - Windows fix (Ionel Cristian Mărieș).

0.10 (2014-06-15)
    - Add autoprefixer filter (Vincent Driessen).
    - Add require.js filter (metagriffin, Erik Taubeneck)
    - A lot of bug fixes and small improvements.

0.9 (2013-10-25)
    webassets now support Python 3, and drops support for Python 2.5.

    - Filter for Closure Soy templates (Michael Su).
    - less filter can output source maps (Riccardo Forina).
    - Support .pyc only deployments (Mike C. Fletcher).
    - Jade template filter (Roshambo).
    - YAMLLoader improvements (incl. Cédric Reginster).
    - The gzip filter was removed.

0.8 (2012-11-23)
    A major change in this release is the removal of the ``django_assets``
    module. The django integration has moved to a separate project:
    https://github.com/miracle2k/django-assets
    See the "Upgrading" section in the documentation for more
    information; you'll also find other backwards-incomatible changes there.

    - Support for a multi-directory load path. See the
      ``Environment.append_path()`` method.
    - Compiler-style filters will now automatically run in debug mode.
    - New filters: cleancss, css_slimmer, stylus, spritemapper,
      jinja2, typescript
    - Various filters have received improvements, including: coffeescript,
      less, compass, pyscss, jst
    - The bundled copy of ``jsmin`` has been removed for licensing reasons.
    - Various improvements to the documentation (much work still required).
    - Improve standalone usage of the ``webassets`` command line script. For
      example, the command line can now load YAML files.
    - Added a new JSON manifest implementation (Krzysztof Tarnowski).
    - Bundles now support an ``extra`` dict that is made available by the
      template tags, usuable for arbitrary custom data.