@@ -1,6 +1,7 @@
 Unreleased
     - Prevent filters from crashing if the input file is empty (empty string
       passed)
+    - Show input content on filter error
 
 0.10.1 (2014-07-03)
     - Python 3 fixes.
